# cogniflow

./: .gitignore  LICENSE  README.md  index.html
.github/workflows/: deploy.yml
app/: index.html  package-lock.json  package.json  tailwind.config.js
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/dashboard/: Dashboard.tsx
app/src/components/focus/: FocusMode.tsx
app/src/components/graph/: KnowledgeGraph.tsx
app/src/components/layout/: CaptureWindow.tsx  SettingsPanel.tsx  Sidebar.tsx
app/src/components/notes/: NoteEditor.tsx  NotesList.tsx
app/src/components/search/: SearchBar.tsx
app/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
app/src/lib/: utils.ts
app/src/stores/: appStore.ts  focusStore.ts  noteStore.ts
app/src/types/: index.ts
scripts/: build.sh
website/: index.html  next.config.js  package-lock.json  package.json  style.css  tailwind.config.ts
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/components/: Features.tsx  FocusShowcase.tsx  Footer.tsx  GraphDemo.tsx  Hero.tsx  Navbar.tsx  Pricing.tsx  Testimonials.tsx
website/src/components/ui/: button.tsx
website_old/: index.html  style.css
